--- a/HTML5-Space-Invaders.html
+++ b/HTML5-Space-Invaders.html
@@ -1373,7 +1373,7 @@
 					// copyright
 					txtArea = new textHelper.textArea({	cls: "field", 
 																				childs: [	textHelper.writeText({id: "instructionsLink", cls: "text clickText smallText", text: "instructions", onclick: screens.instructions}),
-																								textHelper.writeText({id: "copyright", cls: "text smallText", innerhtml: "[ <a href='http://www.matteopiazza.org/blog'>JH5 binary arts</a> ]"})	],
+																								textHelper.writeText({id: "copyright", cls: "text smallText", innerhtml: "[ <a href='http://www.matteopiazza.org/blog/post/2012/03/28/Space-Invaders-HTML5-porting.aspx'>JH5 binary arts</a> ]"})	],
 																				appendTo: container,
 																				width: 400,
 																				position: "centerBottom" });															
