--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-		<title>microSpaceInvaders - sky version</title>
+		<title>Space Invaders</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"> 
 		<style type="text/css">
 			@font-face {
