--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 				// crossbrowser implementation for requestAnimationFrame
 				var requestAnimation = (function() {
 					return window.requestAnimationFrame 
-					|| window.webkitRequestAnimationFrame 
+					//|| window.webkitRequestAnimationFrame 
 					|| window.mozRequestAnimationFrame 
 					|| window.oRequestAnimationFrame 
 					|| window.msRequestAnimationFrame 
