--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				
 				// crossbrowser implementation for requestAnimationFrame
 				var requestAnimation = (function() {
-					return window.requestAnimationFrame 
+					return //window.requestAnimationFrame 
 					//|| window.webkitRequestAnimationFrame 
 					|| window.mozRequestAnimationFrame 
 					|| window.oRequestAnimationFrame 
