--- a/index.html
+++ b/index.html
@@ -322,14 +322,14 @@
 				(function() {
 					var lastTime = 0;
 					var vendors = ['ms', 'moz', 'webkit', 'o'];
-					for(var x = 0; x < vendors.length && !window.requestAnimationFrameFrame; ++x) {
-						window.requestAnimationFrameFrame = window[vendors[x]+'requestAnimationFrameFrame'];
+					for(var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+						window.requestAnimationFrame = window[vendors[x]+'requestAnimationFrame'];
 						window.cancelAnimationFrame = 
-						  window[vendors[x]+'CancelAnimationFrame'] || window[vendors[x]+'CancelrequestAnimationFrameFrame'];
+						  window[vendors[x]+'CancelAnimationFrame'] || window[vendors[x]+'CancelrequestAnimationFrame'];
 					}
 				 
-					if (!window.requestAnimationFrameFrame)
-						window.requestAnimationFrameFrame = function(callback, element) {
+					if (!window.requestAnimationFrame)
+						window.requestAnimationFrame = function(callback, element) {
 							var currTime = new Date().getTime();
 							var timeToCall = Math.max(0, 16 - (currTime - lastTime));
 							var id = window.setTimeout(function() { callback(currTime + timeToCall); }, 
