--- a/HTML5-Space-Invaders.html
+++ b/HTML5-Space-Invaders.html
@@ -310,6 +310,13 @@
 		</style>
 		<script type="text/javascript">
 		
+			/* #############################################################################################################
+			Matteo Piazza, 2013 
+			matteopiazza.org/blog
+			This work is licensed under a Creative Commons Attribution - Share Alike 3.0 - Unported license (CC BY-SA 3.0). 
+			The text of the license is available at http://creativecommons.org/licenses/by-sa/3.0/
+			############################################################################################################# */
+		
 			var microSpaceInvaders = function() {
 				
 				// element selector
