CSSRule.KEYFRAMES_RULE Chrome bug fix.
Fixing bug where Chrome wrongly uses CSSRule.KEYFRAMES_RULE togeter with "@keyframes" instead of CSSRule.WEBKIT_KEYFRAMES_RULE with "@-webkit-keyframes" (as noticed in http://stackoverflow.com/questions/20007992/chrome-suddenly-stopped-accepting-insertrule).

--- a/HTML5-Space-Invaders.html
+++ b/HTML5-Space-Invaders.html
@@ -1153,14 +1153,16 @@
 							// set @keyframes using CSSOM: "from" and "to" are derived from <p> offsetWidth
 							var style = document.documentElement.appendChild(document.createElement("style"));
 							var rule =	p.id + "_typing {from {width: 0} to {width: " + nChar + "em}}";	// setting width this way avoids problems due to @fontface loading delay
-							if (CSSRule.KEYFRAMES_RULE) { // W3C
-								style.sheet.insertRule("@keyframes " + rule, 0);
-							} 
-							else if (CSSRule.WEBKIT_KEYFRAMES_RULE) { // WebKit
+							if (CSSRule.WEBKIT_KEYFRAMES_RULE) { 
 								style.sheet.insertRule("@-webkit-keyframes " + rule, 0);
 							}
-							else if (CSSRule.MOZ_KEYFRAMES_RULE) { // WebKit
+							// Mozilla
+							else if (CSSRule.MOZ_KEYFRAMES_RULE) { 
 								style.sheet.insertRule("@-moz-keyframes " + rule, 0);
+							}
+							// W3C
+							else if (CSSRule.KEYFRAMES_RULE) { 
+								style.sheet.insertRule("@keyframes " + rule, 0);
 							}
 							///
 							
